  FIXED: Race condition between model import and translation registration in
         production by ensuring that models are registered for translation
         before TranslationAdmin runs.
         (thanks to carl.j.meyer, resolves issue 19)
  FIXED: Added workaround for swallowed ImportErrors by printing a traceback
         explicitly.
         (resolves issue 17)
  FIXED: Only print debug statements to stdout if the runserver or
         runserver_plus management commands are used.
         (resolves issue 16)
  FIXED: Removed print statements so that modeltranslation is usable with
         mod_wsgi.
         (resolves issue 7)
  FIXED: Broken admin fields and fieldsets.
         (thanks simoncelen, resolves issue 9)
  FIXED: Creation of db fields with invalid python language code.
         (resolves issue 4)
  FIXED: Tests to run from any project.
         (thanks carl.j.meyer, resolves issue 6)
  FIXED: Removed unused dependency to content type which can break syncdb.
         (thanks carl.j.meyer, resolves issue 1)

  ADDED: Preserve the formfield widget of the translated field.
         (thanks piquadrat)
  ADDED: Initial support for django-south.
         (thanks andrewgodwin, resolves issue 11)
  ADDED: Support for admin inlines, common and generic.
         (resolves issue 12 and issue 18)


v0.1
====

Date: 2009-02-22

Initial release packaged from revision 19.